@@ -1,6 +1,6 @@
 {
-    "version": "3.4.1.14",
-    "versionFriendly": "3.4.1",
+    "version": "3.4.2.2",
+    "versionFriendly": "3.4.2",
     "versionSp": "",
-    "appID": "80db0980-33f3-49e1-ad8a-7d27068cdd1d"
+    "appID": "6b60d97d-db82-4986-995f-31e2aad16832"
 }
